--- a/Front/MusicHeatMapReact/android/app/src/main/AndroidManifest.xml
+++ b/Front/MusicHeatMapReact/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
       android:name=".MainApplication"
@@ -23,6 +25,6 @@
       </activity>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDMgsFrMxI6LxMymPSsUKRaQNjRFE2bGtg"/>
+            android:value="AIzaSyAC8FnSTndhyZoFC6BpraAUNqx1em2TUyw"/>
     </application>
 </manifest>
