--- a/Front/MusicHeatMapReact/package.json
+++ b/Front/MusicHeatMapReact/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.2.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^19.0.1",
     "@react-native-firebase/auth": "^19.0.1",
@@ -17,15 +18,19 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/stack": "^6.3.29",
     "expo": "^49.0.23",
+    "expo-location": "~16.1.0",
+    "expo-status-bar": "^1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.3",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-maps": "^1.13.0",
     "react-native-reanimated": "^2.17.0",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.29.0",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
