--- a/Front/MusicHeatMapReact/android/app/src/main/AndroidManifest.xml
+++ b/Front/MusicHeatMapReact/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
       android:theme="@style/AppTheme">
       <meta-data
         android:name="com.google.android.geo.API_KEY"
-        android:value="AIzaSyAC8FnSTndhyZoFC6BpraAUNqx1em2TUyw"/>
+        android:value=/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
